build(deps): upgrade angular masterail 11.2.7 to 12.0.0

--- a/src/app/frontend/_light.scss
+++ b/src/app/frontend/_light.scss
@@ -12,7 +12,7 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-@import '~@angular/material/theming';
+@use '~@angular/material' as mat;
 @import './theming';
 
 $colors-light: (
@@ -31,9 +31,9 @@ $colors-light: (
 );
 
 // sass-lint:disable function-name-format
-$kd-blue: map_merge($mat-blue, (500: #326de6));
+$kd-blue: map_merge(mat.$blue-palette, (500: #326de6));
 
-$theme-light: mat-light-theme(mat-palette($kd-blue), mat-palette($kd-blue), mat-palette($kd-blue));
+$theme-light: mat.define-light-theme(mat.define-palette($kd-blue), mat.define-palette($kd-blue), mat.define-palette($kd-blue));
 
 $background: map-get($theme-light, background);
 $background: map_merge($background, (background: #edeff0));
@@ -42,7 +42,7 @@ $theme-light: map_merge($theme-light, (background: $background));
 
 // sass-lint:disable no-color-literals
 .kd-light-theme {
-  @include angular-material-theme($theme-light);
+  @include mat.all-component-themes($theme-light);
   @include kd-theme($theme-light, $colors-light);
 
   .kd-toolbar-logo-text,
