--- a/src/app/frontend/_dark.scss
+++ b/src/app/frontend/_dark.scss
@@ -12,7 +12,7 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-@import '~@angular/material/theming';
+@use '~@angular/material' as mat;
 @import './theming';
 
 $colors-dark: (
@@ -31,9 +31,9 @@ $colors-dark: (
 );
 
 // sass-lint:disable function-name-format
-$kd-blue: map_merge($mat-blue, (500: #327df4));
+$kd-blue: map_merge(mat.$blue-palette, (500: #327df4));
 
-$theme-dark: mat-dark-theme(mat-palette($kd-blue), mat-palette($kd-blue), mat-palette($kd-blue));
+$theme-dark: mat.define-dark-theme(mat.define-palette($kd-blue), mat.define-palette($kd-blue), mat.define-palette($kd-blue));
 
 $background: map-get($theme-dark, background);
 $background: map_merge($background, (background: #1d1d1d));
@@ -45,7 +45,7 @@ $theme-dark: map_merge($theme-dark, (background: $background));
 
 // sass-lint:disable no-color-literals
 .kd-dark-theme {
-  @include angular-material-theme($theme-dark);
+  @include mat.all-component-themes($theme-dark);
   @include kd-theme($theme-dark, $colors-dark);
 
   .kd-toolbar-logo-text,
